# lib/commands/generateApi/generateProxyEndPoint.js
@@ -42,7 +42,16 @@ module.exports = function generateProxyEndPoint(apiProxy, options, api, cb) {
               } // pipe request / response if ends here
             }  // proxy check ends here
           } // for loop ends here
-        } // check for policies ends here
+        } // check for normal policies ends here
+        // Check for Security Policies in a-127
+        if (resourceItem['security']) {
+          for (var security in resourceItem['security']) {
+            for (var stepName in resourceItem['security'][security]) {
+              var step = requestPipe.ele('Step', {});
+              step.ele("Name", {}, stepName);
+            }
+          }
+        }
       }  // methods check ends here
     }  // for loop for resources ends here
   }  // for loop for paths ends here
